[gd_scene load_steps=7 format=3 uid="uid://btfefnsfi8rmt"]

[ext_resource type="Script" uid="uid://cm78utmlhv6j8" path="res://Collectibles/airstrike_beacon.gd" id="1_jf63r"]
[ext_resource type="FontFile" uid="uid://bcs10ci4xmn4v" path="res://UI/fonts/Transformers Movie font.ttf" id="2_ad22u"]
[ext_resource type="AudioStream" uid="uid://70qi4qh4tahl" path="res://Collectibles/beacon-pickup.mp3" id="3_jnken"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3b2r7"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_3ku02"]
size = Vector3(2, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5ybvh"]
size = Vector3(2, 1, 1)

[node name="AirstrikeBeacon" type="Area3D" groups=["health_crate"]]
collision_mask = 7
script = ExtResource("1_jf63r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3b2r7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_3ku02")
skeleton = NodePath("../CollisionShape3D")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_5ybvh")

[node name="HelpText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
billboard = 1
text = "E to collect beacon"
font = ExtResource("2_ad22u")
font_size = 128

[node name="PickupAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jnken")
volume_db = 30.0
unit_size = 100.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
